# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

July 17, 2002
	Michael Hudson's unicode cleanups

June 15, 2002
	added get_time() and get_rawtime() to Clock

pygame-15
May 30, 2002
	final updates for 1.5

May 28, 2002
	changed default font to helmet bold

May 27, 2002
	added smart class to handle missing modules

May 17, 2002
	added display.set_gamma_ramp(). thx andrew

May 16, 2002
	custom blitters to handle destination pixel alphas
	fix recursive subsurfaces and subsurface blit returns

May 13, 2002
	fixed CD.play()

May 8, 2002
	music.play() start time works
	image.save() can save TGA images
	cannot subsurface a subsurface [BREAK]
	blits to subsurfaces are passed through

May 7, 2002
	added the sndarray module
	added surfarray.make_surface()

April 25, 2002
	added gl_set_attribute(), gl_get_attribute()

April 16, 2002
        mixer keeps a reference to playing Sound objects
        channel.set_volume() can take 2 volumes for panning
        music.play() can take a starting position for the song

April 14, 2002
	bug when re-initializing pygame.display [BUG]

April 8, 2002
        rectstyle now includes any object with a "rect" attrib
	rects now have collidedict() and collidedictall()

March 27, 2002
	fixes for windows music.get_pos() and windows config

March 23, 2002
	big config.py update
	music.get_pos()  (thx Michael Urman)

March 20, 2002
	sprite.spritecollideany() now works as described

March 4, 2002
        sprite.RenderClear can accept a function as bgd

February 19, 2002
	event.peek() returns next event [BREAK?]
	Event objects have 'truth' operator

February 13, 2002
        all draw primitives have a default width

February 11, 2002
        Rect unionall() and unionall_ip() fixed

February 10, 2002
        pygame.init() not required for proper cleanup [BUG]
        CD.play() fixed for tracks above 0
